[package]
name = "neptunectl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "neptunectl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
fastrand = "2.1.1"
indicatif = "0.17.8"
ripunzip = "2.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.13.0"
