[package]
name = "lunactl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lunactl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.20", features = ["derive"] }
fastrand = "2.1.1"
indicatif = "0.17.8"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
ripunzip = "2.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.13.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
which = "6.0.3"
